--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -2,7 +2,7 @@
 \chapter{Integrating Activity Language Into Gamma}\label{ch:activiy_verification}
 %----------------------------------------------------------------------------
 
-In the previous chapter, I have introduced the Gamma Activity Language - it's formalism and textual representation. However, in order to use it for model verification, it has to be integrated into the Gamma transformation pipeline (see \autoref{fig:gamma-overview}). For this integration, I start by defining \emph{how} it integrates with Gamma in \autoref{sec:activities-alongside-statecharts}, after which I show transformation algorithm in \autoref{sec:activities-as-state-based-models}. Finally, I talk a bit about the implementation details in \autoref{sec:implementation-regards}. 
+In the previous chapter, I introduced the Gamma Activity Language - the important parts of its metamodel along with the semantics of the model elements and their textual syntax. However, in order to formally verify activity models, the language has to be integrated into the Gamma transformation pipeline (see \autoref{fig:gamma-overview}). For this integration, I start by defining \emph{how} it integrates with Gamma in \autoref{sec:activities-alongside-statecharts}, after which I show transformation algorithm in \autoref{sec:activities-as-state-based-models}. Finally, I overview the implementation details in \autoref{sec:implementation-regards}. 
 
 \input{content/activity-model-verification/activities-alongside-statecharts}
 \input{content/activity-model-verification/state-model}
