--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -26,7 +26,7 @@ Finally, the abstract traces are mapped into concrete (executable) traces tailor
 
 \subsection{Example Statechart}
 
-\autoref{lst:gamma-statechart} shows the Gamma Statechart representation of the State Machine introduced in \autoref{fig:sysml_state_machine}. \todo{more description}
+\autoref{lst:gamma-statechart} shows the Gamma Statechart representation of the State Machine introduced in \autoref{fig:sysml_state_machine}.
 
 \begin{lstlisting}[float,language=statechart, caption={The traffic light controller state machine in the Gamma textual representation.}, label={lst:gamma-statechart}]
 package TrafficLightCtrl
