--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,20 +2,28 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-The purpose of the Gamma Activity Language is the following: it should support as many features from SysML activity diagrams as possible, while also being simple to implement and transform to low-level models. \todo{Ezt a részt át kéne írni} As you could see from the \autoref{ssec:activities-as-petri-nets}, SysML activity diagrams cannot be exactly transformed to a formal model; we have to constrain our language in order to offer formal semantics. However, as you will see, these constraints still allow us to write \emph{almost} all activities.
+The purpose of the Gamma Activity Language is the following: it should support as many features from SysML activity diagrams as possible, while also being simple to implement and transform to low-level models. In order to make the transformation easier, the language only supports a constrained subset of the SysML feature set, however, this does not hinder it's expressiveness.
 
-\subsection{Constraints}
+\subsection{SysML Feature Subset}
 
-Compared to SysML activity diagrams, Activity Language has the following constrains:
+Compared to SysML activity diagrams, GATL supports the following language constructs:
 
 \begin{itemize}
-	\item The model cannot contain \emph{flow final} nodes.
-	\item The model cannot contain \emph{receive signal} nodes.
-	\item The model cannot contain\emph{interrupt} flows.
-	\item Flows may contain only \emph{one} token at a given time.
-	\item Activities must be contained by \emph{statecharts}, as they cannot describe a component's behaviour in themself.
+	\item \emph{control} and \emph{data} flows.
+	\item \emph{Initial} and \emph{activity final} nodes.
+	\item \emph{Decision} and \emph{merge} nodes - without probability.
+	\item \emph{Fork} and \emph{join} nodes.
+	\item \emph{Action} nodes - which can contain inner activities (Call behaviour in SysML).
+	\item \emph{Pins} on action nodes.
+	\item \emph{Trigger} nodes - trigger nodes can wait for specific triggers, like signals or timeout events, much like the \emph{receive signal} nodes in SysML.
+	\item \emph{Action} nodes - action nodes may contain specific internal actions\footnote{Written in the Gamma Action Language.}, that can calculate values, and send signals through specific ports.
 \end{itemize}
 
-\subsection{Improvement over Petri Net Mapping}
+\subsection{Constraints}\label{ssec:activity-constraints}
 
-Compared to the Petri net mapping introduced in \autoref{ssec:activities-as-petri-nets}, the Activity Language supports guards, valued tokens, actions and composite activities.
+\todo{describe constraints in more detail}
+
+\begin{itemize}
+	\item only do action, no call behaviour on transitions
+	\item activities cannot describe a component in themselves.
+\end{itemize}
