--- a/src/content/background/engineering-models.tex
+++ b/src/content/background/engineering-models.tex
@@ -26,7 +26,7 @@ Systems Modeling Language (OMG SysML \cite{omg_sysml}) is a general-purpose mode
 
 This work focuses only on the \emph{behavioural} modeling tools SysML provides. In the following section, I present two of the most used concepts; State Machines and Activity Diagrams.
 
-\subsubsection{State Machine}
+\subsubsection*{State Machine}
 
 Reactive systems are all around us in our daily lives; in smart phones, avionics systems or event our calculators. Frequently, reactive systems appear in areas, where safety-critical operation is crucial, as even the slightest
 misbehaviour can have catastrophic consequences. This makes the verification of these systems a must during their design process.
@@ -42,10 +42,9 @@ The defining characteristic of reactive systems is their event-driven nature, wh
 
 SysML state machines extend the concept of statecharts with hierarchical state-refinement, orthogonal regions, action-effect behaviour and state machine composition. These advanced abstraction constructs make state machines easy to use for engineers, but hinder their formal verification. This abstraction gap can be bridged using a transformation tool, such as Gamma, of which I will be talking in \autoref{sec:gamma}.
 
-\autoref{fig:sysml_state_machine} shows a state machine modeling the behaviour of a traffic light controller.
-\todo{explain controller behaviour in words}
+\autoref{fig:sysml_state_machine} shows a state machine modeling the behaviour of a traffic light controller. The \emph{TrafficLightCtrl} component has three ports, two inputs (\emph{Control} and \emph{PoliceInterrupt}) for user input, and one output (\emph{LightCommands}) for controlling the specific light it is connected to. The state machine changes between the \emph{red}-\emph{green}\emph{yellow} lights, upon a \emph{toggle} command. However, if a \emph{police} signal is received, it starts turning on and off the yellow light every 500ms.
 
-\subsubsection{Activity Diagram}\label{ssec:sysml_activity}
+\subsubsection*{Activity Diagram}\label{ssec:sysml_activity}
 
 State machines cannot describe the complicated semantics of distributed systems with concurrent, parallel behaviour, where the \emph{interesting} thing is what the system \emph{does} step-by-step. SysML activity diagrams are a primary representation for modeling process based behaviour \cite{omg_sysml} for distributed, concurrent systems. \autoref{fig:sysml_activity_artifacts} shows the set of interesting modeling elements used in this work. In the following, I will introduce the different artifacts and show an example of a SysML activity diagram.
 
