--- a/src/content/appendices/activity_language.tex
+++ b/src/content/appendices/activity_language.tex
@@ -4,7 +4,7 @@
 
 \subsection*{Language elements}
 
-The following section gives high level introduction into the syntax of the Gamma Activity DSL.
+The following section gives high level introduction into the syntax of the Gamma Activity Language.
 
 \subsubsection*{Pins}\label{sssec:pins}
 
