--- a/src/content/evaluation.tex
+++ b/src/content/evaluation.tex
@@ -5,3 +5,45 @@
 spacecraft model bevezetése, leírása
 statechart elemek referálása, activity-k megírása kézzel (modell mehet apendix-be)
 mérések végzése és leírása
+
+\begin{figure}[!ht]
+	\centering
+	\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{consume_power}
+	\caption{}
+	\label{}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{ground_station}
+\caption{}
+\label{}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{ping_spacecraft}
+\caption{}
+\label{}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{recharge_batteries}
+\caption{}
+\label{}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{spacecraft_modes}
+\caption{}
+\label{}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{transmit_data}
+\caption{}
+\label{}
+\end{figure}
