--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -1,8 +1,8 @@
 %----------------------------------------------------------------------------
-\chapter{Integrating Activity Language Into Gamma}\label{ch:activiy_verification}
+\chapter{Integrating the Activity Language Into Gamma}\label{ch:activiy_verification}
 %----------------------------------------------------------------------------
 
-In the previous chapter, I introduced the Gamma Activity Language - the important parts of its metamodel along with the semantics of the model elements and their textual syntax. However, in order to formally verify activity models, the language has to be integrated into the Gamma transformation pipeline (see \autoref{fig:gamma-overview}). For this integration, I start by defining \emph{how} it integrates with Gamma in \autoref{sec:activities-alongside-statecharts}, after which I show transformation algorithm in \autoref{sec:activities-as-state-based-models}. Finally, I overview the implementation details in \autoref{sec:implementation-regards}. 
+In the previous chapter, I introduced the Gamma Activity Language - the important parts of its metamodel along with the semantics of the model elements and their textual syntax. However, in order to formally verify activity models, the language has to be integrated into the Gamma transformation pipeline (see \autoref{fig:gamma-overview}). For this integration, I start by defining \emph{how} the semantics of activities alongside statecharts in \autoref{sec:activities-alongside-statecharts}, after which I define the integration semantics in \autoref{sec:integration-semantics}. Finally, I overview the implementation details in \autoref{sec:implementation-remarks}. 
 
 \input{content/activity-model-verification/activities-alongside-statecharts}
 \input{content/activity-model-verification/state-model}
