--- a/src/content/activity-model-verification/activities-alongside-statecharts.tex
+++ b/src/content/activity-model-verification/activities-alongside-statecharts.tex
@@ -2,73 +2,54 @@
 \section{Activities Alongside Statecharts}\label{sec:activities-alongside-statecharts}
 %----------------------------------------------------------------------------
 
-In the real world, SysML models often contain state machines that call activity diagrams using a state's \emph{do behaviour}, as often times this makes the design process easier. However, Gamma does not support statecharts containing \emph{do activity} actions. Thus, first I extend the Gamma meta-model to support calling activities from states.
+In this section, I present the various questions that arose when I integrated GATL into Gamma statecharts, and present my solutions and reasoning for said problems.
 
-\subsection{Gamma Extensions}
+\subsection{Calling Activities}
 
-First, I extended Gamma \emph{States} to include \emph{do} actions as well among \emph{entry} and \emph{exit} actions (see \autoref{fig:gamma-statechart-extension}). In order to enable calling activities from statecharts, I added the \emph{CallActivityAction}, which has a reference to an activity declaration (see \autoref{fig:gamma-statechart-extension}). These changes can be seen visually in \autoref{fig:gamma-activity-overview}. Added parts are outlined with green, while edited parts are outlined with orange.
+In order to create the connection between statecharts and activities, the user needs an interface to do so. There are many ways to call activities from statecharts:
 
-\begin{figure}[!ht]
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{gamma-activity-extension}
-		\caption{Call activity action}
-		\label{fig:gamma-activity-extension}
-	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includesvg[inkscapelatex=false, width=40mm, keepaspectratio]{gamma-statechart-extension}
-		\caption{State modification}
-		\label{fig:gamma-statechart-extension}
-	\end{subfigure}
-	\caption{Extensions to the Gamma meta-model}
-	\label{fig:gamma-extension}
-\end{figure}
+\paragraph{Transition Actions}
 
-\begin{figure}[!ht]
-	\centering
-	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-activity-overview}
-	\caption{Overview of my modification to the Gamma framework.}
-	\label{fig:gamma-activity-overview}
-\end{figure}
+The first solution that came in mind was calling activities from transition actions. At first glance, this makes the most sense, however, as activities are inherently parallel in nature, the resulting implementation would have to \emph{flatten} the activity model - the action cannot contain loops, and has to be atomic. Because of time constraints, this feature was not chosen. 
 
-\subsection{Challenges of Calling Activities}
+\paragraph{Do Behaviours}
 
-how to integrate into gamma, action, do action, etc, transition
-gamma használja az xsts-t -> xsts-re kell trafózni
+In SysML, states may have do behaviours. This means, that the \emph{behaviour} (activity in our case) is \emph{ran} while the state machine is inside the given state, and \emph{halted} when the state is left. However, the semantics are not clear.
 
+Semantically, the halting of the activity can happen in two ways: 
 
-ez a rész csak jegyzet
+\begin{itemize}
+	\item The state \emph{signals} the activity, that is should end, and waits until it halts - creating a synchronisation step.
+	\item The activity checks if it should run - whether the state machine is in the given state.
+\end{itemize}
 
-Initial/final node, action node, composite activity node, decision/merge node, fork/join node, pins, control/data flows.
+Another open question is what happens, when a state has a loop transition into itself? Is the activity stopped, asked to stop, or a whole new activity is created?
 
-Do behaviour: 
+For simplicities sake, I chose do behaviours with option two: check each time when the activity would do something, whether it is \emph{enabled} to run, or not. Additionally, when the containing state becomes active, the activity nodes are reset to \emph{Idle} state, and the initial nodes are started.
 
-call activity action on transitions is not supported, would have to be inlined and flattened, atomic functions, interlaced with line execution semantics (future work)
+\subsection{Activities Defining Components}
 
-- call activity context függő - hosszú (nem atomikus) dolgot nem lehet akárhol meghívni (transition, sima action, stb)
-- validáció: inline környezetben tilos várakozás és ciklus (vagy csak x mélységig)
-- sok köztes nem stabil állapot
-- nagy változás a trafóban
+In SysML, components' behaviour may be defined directly by activities. However in Gamma, all components use reactive semantics, which would have been difficult to implement. Thus, activities may only appear inside statecharts for now.
 
-ezért csak do activity van
+Although this constrains us to only use statecharts directly, we can still utilise the reactive nature of components, by adding a special activity node, that listens for such events.
 
-fentebb leírtam, hogyan lehet leképezni proces modelleket, de így csak magukban futhatnak. Itt most leírom, hogy milyen nehézségeket okozhat, amikor egymás mellett futtatjuk őket:
+\subsection{Trigger Node}
 
-do activity:
-
-amikor a state aktív, futhat az aktivity, de ez pár problémával jön: párhuzamossági és szinkornizációs problémák
-
-action:
-
-egy activity értékét ki kell lapítani, hogy a tranzíció tüzelése után azonnal értelmezhető legyen (nem felezhetjük el az adott tranzíciót, mert akkor érvénytelen állapotaink lesznek)
-
-unblock:
-
-még nagy kérdés, hogy milyen szinten bontsuk fel a lépéseket, mennyire legyenek atomikusak, mik futhatnak egymás mellett, stb
-
-alap elképzelésben akár egy activity akár egy állapotgép definiálhat egy komponsens viselkedését, de jelenleg ezt is egyszerűsített módon implementáltuk; az activity az állapotgép része lehet
-
-megoldás a kérdésekre:
-
-megoldásként a legegyszerűbb módszert választottuk, mert első sorban az a kérdés, hogy ez a módszer egyáltalán alkalmazható-e; a másik mindenképpen bonyolítja az implementációt és a létrejövő modellt is
+\emph{TriggerNodes} extend the activity semantics, by adding an additional assumption operation inside the \(	O_\mathit{NodeRun}\) operation function, checking if the given event has been received. The following example shows a trigger node, that will be executed only when it has a token from the initial node, and the \emph{start} event is received from the \emph{Control} port.
+\vspace{6mm}
+\begin{lstlisting}[language=statechart]
+statechart Statechart [
+	port connection : requires Control
+] {
+	// definitions ...
+	
+	activity DoActivity {
+		initial Initial
+		trigger AcceptEvent when connection.start
+		final Final
+		
+		control flow from Initial to AcceptEvent
+		control flow from AcceptEvent to Final
+	}
+}
+\end{lstlisting}
